no major change

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     <link rel="javascript" href="script.js" />
     <title>Scorecard</title>
   </head>
-  <body> </body>
+  <body>
+    
+    
+  </body>
 </html>
