--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Scorecard</title>
   </head>
   <body>
-    
-    
+    <div id="container">
+      <div id="card-bg">
+        <h3></h3>
+      </div>
+    </div>
   </body>
 </html>
