--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h2 id="homescore">0</h2>
           </div>
           <div class="result-info-div">
-            <h2 id="result-info">Lets Go!</h2>
+            <h2 id="resultinfo">Let's Go!</h2>
           </div>
           <div class="away-score-div">
             <h2 id="awayscore">0</h2>
@@ -57,7 +57,7 @@
         </div>
         <div>
           <button class="resetbutton" type="button" onclick="resetBtn()">
-            Reset Game
+            New Game?
           </button>
         </div>
         <div class="score-btn-div">
